# webapp/pod/internal/controller/controller.go
@@ -2,14 +2,11 @@ package controller
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
 
-	"k8soperation/core"
+	"k8soperation/pod/internal/service"
 
 	"github.com/go-chi/chi/v5"
-	corev1 "k8s.io/api/core/v1"
-	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 )
 
 func Controller() http.Handler {
@@ -22,35 +19,20 @@ func Controller() http.Handler {
 }
 
 func podIndex(w http.ResponseWriter, r *http.Request) {
-	clientset, err := core.GetKubeClient()
-	if err != nil {
-		http.Error(w, "Failed to create k8s client: "+err.Error(), http.StatusInternalServerError)
-		return
-	}
-	pods, err := clientset.CoreV1().Pods("").List(r.Context(), metav1.ListOptions{})
+	namespace := chi.URLParam(r, "namespace")
+	pods, err := service.ListPods(r.Context(), namespace)
 	if err != nil {
 		http.Error(w, "Failed to list pods: "+err.Error(), http.StatusInternalServerError)
 		return
 	}
 	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(pods.Items)
+	json.NewEncoder(w).Encode(pods)
 }
 
 func podDetail(w http.ResponseWriter, r *http.Request) {
+	namespace := chi.URLParam(r, "namespace")
 	podID := chi.URLParam(r, "podID")
-	clientset, err := core.GetKubeClient()
-	if err != nil {
-		http.Error(w, "Failed to create k8s client: "+err.Error(), http.StatusInternalServerError)
-		return
-	}
-	// podID is expected as namespace/name
-	var namespace, name string
-	_, err = fmt.Sscanf(podID, "%[^/]/%s", &namespace, &name)
-	if err != nil {
-		http.Error(w, "podID must be in namespace/name format", http.StatusBadRequest)
-		return
-	}
-	pod, err := clientset.CoreV1().Pods(namespace).Get(r.Context(), name, metav1.GetOptions{})
+	pod, err := service.GetPod(r.Context(), namespace, podID)
 	if err != nil {
 		http.Error(w, "Failed to get pod: "+err.Error(), http.StatusInternalServerError)
 		return
@@ -60,27 +42,12 @@ func podDetail(w http.ResponseWriter, r *http.Request) {
 }
 
 func podCreate(w http.ResponseWriter, r *http.Request) {
-	clientset, err := core.GetKubeClient()
-	if err != nil {
-		http.Error(w, "Failed to create k8s client: "+err.Error(), http.StatusInternalServerError)
-		return
-	}
 	var podSpec map[string]interface{}
 	if err := json.NewDecoder(r.Body).Decode(&podSpec); err != nil {
 		http.Error(w, "Invalid request body: "+err.Error(), http.StatusBadRequest)
 		return
 	}
-	podBytes, err := json.Marshal(podSpec)
-	if err != nil {
-		http.Error(w, "Failed to marshal pod spec: "+err.Error(), http.StatusBadRequest)
-		return
-	}
-	var podObj = &corev1.Pod{}
-	if err := json.Unmarshal(podBytes, podObj); err != nil {
-		http.Error(w, "Failed to unmarshal pod spec: "+err.Error(), http.StatusBadRequest)
-		return
-	}
-	created, err := clientset.CoreV1().Pods(podObj.Namespace).Create(r.Context(), podObj, metav1.CreateOptions{})
+	created, err := service.CreatePod(r.Context(), podSpec)
 	if err != nil {
 		http.Error(w, "Failed to create pod: "+err.Error(), http.StatusInternalServerError)
 		return
@@ -90,19 +57,9 @@ func podCreate(w http.ResponseWriter, r *http.Request) {
 }
 
 func podDelete(w http.ResponseWriter, r *http.Request) {
+	namespace := chi.URLParam(r, "namespace")
 	podID := chi.URLParam(r, "podID")
-	clientset, err := core.GetKubeClient()
-	if err != nil {
-		http.Error(w, "Failed to create k8s client: "+err.Error(), http.StatusInternalServerError)
-		return
-	}
-	var namespace, name string
-	_, err = fmt.Sscanf(podID, "%[^/]/%s", &namespace, &name)
-	if err != nil {
-		http.Error(w, "podID must be in namespace/name format", http.StatusBadRequest)
-		return
-	}
-	err = clientset.CoreV1().Pods(namespace).Delete(r.Context(), name, metav1.DeleteOptions{})
+	err := service.DeletePod(r.Context(), namespace, podID)
 	if err != nil {
 		http.Error(w, "Failed to delete pod: "+err.Error(), http.StatusInternalServerError)
 		return
